- move docs to separated project lense-lang-docs - Added errasure from lense.core.lang.Boolean to primitive boolean - Added is operator. - Added semantic cast for logical "and" operations - Moved type declarion to after variable/parameter name - Added auto property generation in primary constructor - Added support for tuple, sequences and association literals - Added support for Imaginary and Complex numbers.